tests/ui/delegation/generics/generics-gen-args-errors.stderr
error[E0401]: can't use generic parameters from outer item
  --> $DIR/generics-gen-args-errors.rs:35:21
   |
LL |     fn check<A, B, C>() {
   |              - type parameter from outer item
...
LL |         reuse foo::<A, B, C> as xd;
   |                     ^           -- generic parameter used in this inner delegated function
   |                     |
   |                     use of generic parameter from outer item
   |
   = note: nested items are independent from their parent item for everything except for privacy and name resolution

error[E0401]: can't use generic parameters from outer item
  --> $DIR/generics-gen-args-errors.rs:35:24
   |
LL |     fn check<A, B, C>() {
   |                 - type parameter from outer item
...
LL |         reuse foo::<A, B, C> as xd;
   |                        ^        -- generic parameter used in this inner delegated function
   |                        |
   |                        use of generic parameter from outer item
   |
   = note: nested items are independent from their parent item for everything except for privacy and name resolution

error[E0401]: can't use generic parameters from outer item
  --> $DIR/generics-gen-args-errors.rs:35:27
   |
LL |     fn check<A, B, C>() {
   |                    - type parameter from outer item
...
LL |         reuse foo::<A, B, C> as xd;
   |                           ^     -- generic parameter used in this inner delegated function
   |                           |
   |                           use of generic parameter from outer item
   |
   = note: nested items are independent from their parent item for everything except for privacy and name resolution

error[E0261]: use of undeclared lifetime name `'asdasd`
  --> $DIR/generics-gen-args-errors.rs:52:29
   |
LL |     reuse foo::<'static, _, 'asdasd, 'static, 'static, 'static, _> as bar3;
   |                             ^^^^^^^ undeclared lifetime
   |
help: consider introducing lifetime `'asdasd` here
   |
LL |     reuse foo'asdasd, ::<'static, _, 'asdasd, 'static, 'static, 'static, _> as bar3;
   |              ++++++++

error[E0261]: use of undeclared lifetime name `'a`
  --> $DIR/generics-gen-args-errors.rs:67:50
   |
LL |     reuse foo::<"asdasd", asd, "askdn", 'static, 'a> as bar7;
   |                                                  ^^ undeclared lifetime
   |
help: consider introducing lifetime `'a` here
   |
LL |     reuse foo'a, ::<"asdasd", asd, "askdn", 'static, 'a> as bar7;
   |              +++

error[E0106]: missing lifetime specifiers
  --> $DIR/generics-gen-args-errors.rs:107:19
   |
LL |     reuse Trait::<Trait, Clone, _, 'static, dyn Send, _>::foo::<1, 2, 3, _, 6> as bar7;
   |                   ^^^^^ expected 3 lifetime parameters
   |
help: consider introducing a named lifetime parameter
   |
LL |     reuse Trait::<Trait<'a, 'a, 'a>, Clone, _, 'static, dyn Send, _>::foo'a, ::<1, 2, 3, _, 6> as bar7;
   |                        ++++++++++++                                      +++

error[E0423]: expected value, found struct `String`
  --> $DIR/generics-gen-args-errors.rs:15:33
   |
LL |         bar::<String, String, { String }>();
   |                                 ^^^^^^
   |
  --> $SRC_DIR/alloc/src/string.rs:LL:COL
   |
   = note: `String` defined here

error[E0425]: cannot find type `asd` in this scope
  --> $DIR/generics-gen-args-errors.rs:29:15
   |
LL |         bar::<asd, asd, asd>();
   |               ^^^ not found in this scope
   |
help: you might be missing a type parameter
   |
LL |     fn check<A, B, C, asd>() {
   |                     +++++

error[E0425]: cannot find type `asd` in this scope
  --> $DIR/generics-gen-args-errors.rs:29:20
   |
LL |         bar::<asd, asd, asd>();
   |                    ^^^ not found in this scope
   |
help: you might be missing a type parameter
   |
LL |     fn check<A, B, C, asd>() {
   |                     +++++

error[E0425]: cannot find type `asd` in this scope
  --> $DIR/generics-gen-args-errors.rs:29:25
   |
LL |         bar::<asd, asd, asd>();
   |                         ^^^ not found in this scope
   |
help: you might be missing a type parameter
   |
LL |     fn check<A, B, C, asd>() {
   |                     +++++

error[E0425]: cannot find type `asdasd` in this scope
  --> $DIR/generics-gen-args-errors.rs:56:39
   |
LL |     reuse foo::<String, 'static, 123, asdasd> as bar4;
   |                                       ^^^^^^ not found in this scope

error[E0425]: cannot find type `asd` in this scope
  --> $DIR/generics-gen-args-errors.rs:63:22
   |
LL |     reuse foo::<1, 2,asd,String, { let x = 0; }> as bar6;
   |                      ^^^ not found in this scope

error[E0425]: cannot find type `asd` in this scope
  --> $DIR/generics-gen-args-errors.rs:67:27
   |
LL |     reuse foo::<"asdasd", asd, "askdn", 'static, 'a> as bar7;
   |                           ^^^ not found in this scope

error[E0425]: cannot find type `asd` in this scope
  --> $DIR/generics-gen-args-errors.rs:81:19
   |
LL |     reuse Trait::<asd, asd, asd, asd, asd, asdasa>::foo as bar1;
   |                   ^^^ not found in this scope

error[E0425]: cannot find type `asd` in this scope
  --> $DIR/generics-gen-args-errors.rs:81:24
   |
LL |     reuse Trait::<asd, asd, asd, asd, asd, asdasa>::foo as bar1;
   |                        ^^^ not found in this scope

error[E0425]: cannot find type `asd` in this scope
  --> $DIR/generics-gen-args-errors.rs:81:29
   |
LL |     reuse Trait::<asd, asd, asd, asd, asd, asdasa>::foo as bar1;
   |                             ^^^ not found in this scope

error[E0425]: cannot find type `asd` in this scope
  --> $DIR/generics-gen-args-errors.rs:81:34
   |
LL |     reuse Trait::<asd, asd, asd, asd, asd, asdasa>::foo as bar1;
   |                                  ^^^ not found in this scope

error[E0425]: cannot find type `asd` in this scope
  --> $DIR/generics-gen-args-errors.rs:81:39
   |
LL |     reuse Trait::<asd, asd, asd, asd, asd, asdasa>::foo as bar1;
   |                                       ^^^ not found in this scope

error[E0425]: cannot find type `asdasa` in this scope
  --> $DIR/generics-gen-args-errors.rs:81:44
   |
LL |     reuse Trait::<asd, asd, asd, asd, asd, asdasa>::foo as bar1;
   |                                            ^^^^^^ not found in this scope

error[E0425]: cannot find type `DDDD` in this scope
  --> $DIR/generics-gen-args-errors.rs:101:34
   |
LL |     reuse Trait::<1, 2, 'static, DDDD>::foo::<1, 2, 3, 4, 5, 6> as bar6;
   |                                  ^^^^ not found in this scope

error[E0284]: type annotations needed
  --> $DIR/generics-gen-args-errors.rs:8:11
   |
LL |     reuse foo as bar;
   |           ^^^ cannot infer the value of the const parameter `N` declared on the function `foo`
   |
note: required by a const generic parameter in `test_1::foo`
  --> $DIR/generics-gen-args-errors.rs:7:48
   |
LL |     fn foo<'a: 'a, 'b: 'b, T: Clone, U: Clone, const N: usize>() {}
   |                                                ^^^^^^^^^^^^^^ required by this const generic parameter in `foo`
help: consider specifying the generic arguments
   |
LL |     reuse foo::<T, U, N> as bar;
   |              +++++++++++

error[E0107]: function takes 3 generic arguments but 6 generic arguments were supplied
  --> $DIR/generics-gen-args-errors.rs:12:9
   |
LL |         bar::<1, 2, 3, 4, 5, 6>();
   |         ^^^          --------- help: remove the unnecessary generic arguments
   |         |
   |         expected 3 generic arguments
   |
note: function defined here, with 3 generic parameters: `T`, `U`, `N`
  --> $DIR/generics-gen-args-errors.rs:8:18
   |
LL |     fn foo<'a: 'a, 'b: 'b, T: Clone, U: Clone, const N: usize>() {}
   |                            -         -         --------------
LL |     reuse foo as bar;
   |                  ^^^

error[E0107]: function takes 2 lifetime arguments but 5 lifetime arguments were supplied
  --> $DIR/generics-gen-args-errors.rs:18:9
   |
LL |         bar::<'static, 'static, 'static, 'static, 'static>();
   |         ^^^                   --------------------------- help: remove the lifetime arguments
   |         |
   |         expected 2 lifetime arguments
   |
note: function defined here, with 2 lifetime parameters: `'a`, `'b`
  --> $DIR/generics-gen-args-errors.rs:8:18
   |
LL |     fn foo<'a: 'a, 'b: 'b, T: Clone, U: Clone, const N: usize>() {}
   |            --      --
LL |     reuse foo as bar;
   |                  ^^^

error[E0747]: constant provided when a type was expected
  --> $DIR/generics-gen-args-errors.rs:21:23
   |
LL |         bar::<String, 1, 'static, i32, 'static>();
   |                       ^

error[E0107]: function takes 3 generic arguments but 5 generic arguments were supplied
  --> $DIR/generics-gen-args-errors.rs:26:9
   |
LL |         bar::<_, _, _, _, _>();
   |         ^^^          ------ help: remove the unnecessary generic arguments
   |         |
   |         expected 3 generic arguments
   |
note: function defined here, with 3 generic parameters: `T`, `U`, `N`
  --> $DIR/generics-gen-args-errors.rs:8:18
   |
LL |     fn foo<'a: 'a, 'b: 'b, T: Clone, U: Clone, const N: usize>() {}
   |                            -         -         --------------
LL |     reuse foo as bar;
   |                  ^^^

error[E0747]: unresolved item provided when a constant was expected
  --> $DIR/generics-gen-args-errors.rs:29:25
   |
LL |         bar::<asd, asd, asd>();
   |                         ^^^
   |
help: if this generic argument was intended as a const parameter, surround it with braces
   |
LL |         bar::<asd, asd, { asd }>();
   |                         +     +

error[E0747]: unresolved item provided when a constant was expected
  --> $DIR/generics-gen-args-errors.rs:35:27
   |
LL |         reuse foo::<A, B, C> as xd;
   |                           ^
   |
help: if this generic argument was intended as a const parameter, surround it with braces
   |
LL |         reuse foo::<A, B, { C }> as xd;
   |                           +   +

error[E0284]: type annotations needed
  --> $DIR/generics-gen-args-errors.rs:46:11
   |
LL |     reuse foo::<> as bar1;
   |           ^^^ cannot infer the value of the const parameter `N` declared on the function `foo`
   |
note: required by a const generic parameter in `test_2::foo`
  --> $DIR/generics-gen-args-errors.rs:44:48
   |
LL |     fn foo<'a: 'a, 'b: 'b, T: Clone, U: Clone, const N: usize>() {}
   |                                                ^^^^^^^^^^^^^^ required by this const generic parameter in `foo`
help: consider specifying the generic arguments
   |
LL |     reuse foo::<T, U, N> as bar1;
   |                 +++++++

error[E0107]: function takes 3 generic arguments but 2 generic arguments were supplied
  --> $DIR/generics-gen-args-errors.rs:49:11
   |
LL |     reuse foo::<String, String> as bar2;
   |           ^^^   ------  ------ supplied 2 generic arguments
   |           |
   |           expected 3 generic arguments
   |
note: function defined here, with 3 generic parameters: `T`, `U`, `N`
  --> $DIR/generics-gen-args-errors.rs:44:8
   |
LL |     fn foo<'a: 'a, 'b: 'b, T: Clone, U: Clone, const N: usize>() {}
   |        ^^^                 -         -         --------------
help: add missing generic argument
   |
LL |     reuse foo::<String, String, N> as bar2;
   |                               +++

error[E0107]: function takes 2 lifetime arguments but 5 lifetime arguments were supplied
  --> $DIR/generics-gen-args-errors.rs:52:11
   |
LL |     reuse foo::<'static, _, 'asdasd, 'static, 'static, 'static, _> as bar3;
   |           ^^^                      --------------------------- help: remove the lifetime arguments
   |           |
   |           expected 2 lifetime arguments
   |
note: function defined here, with 2 lifetime parameters: `'a`, `'b`
  --> $DIR/generics-gen-args-errors.rs:44:8
   |
LL |     fn foo<'a: 'a, 'b: 'b, T: Clone, U: Clone, const N: usize>() {}
   |        ^^^ --      --

error[E0107]: function takes 3 generic arguments but 2 generic arguments were supplied
  --> $DIR/generics-gen-args-errors.rs:52:11
   |
LL |     reuse foo::<'static, _, 'asdasd, 'static, 'static, 'static, _> as bar3;
   |           ^^^ expected 3 generic arguments             -------  - supplied 2 generic arguments
   |
note: function defined here, with 3 generic parameters: `T`, `U`, `N`
  --> $DIR/generics-gen-args-errors.rs:44:8
   |
LL |     fn foo<'a: 'a, 'b: 'b, T: Clone, U: Clone, const N: usize>() {}
   |        ^^^                 -         -         --------------
help: add missing generic argument
   |
LL |     reuse foo::<'static, _, 'asdasd, 'static, 'static, 'static, _, N> as bar3;
   |                                                                  +++

error[E0107]: function takes 2 lifetime arguments but 1 lifetime argument was supplied
  --> $DIR/generics-gen-args-errors.rs:56:11
   |
LL |     reuse foo::<String, 'static, 123, asdasd> as bar4;
   |           ^^^   ------ supplied 1 lifetime argument
   |           |
   |           expected 2 lifetime arguments
   |
note: function defined here, with 2 lifetime parameters: `'a`, `'b`
  --> $DIR/generics-gen-args-errors.rs:44:8
   |
LL |     fn foo<'a: 'a, 'b: 'b, T: Clone, U: Clone, const N: usize>() {}
   |        ^^^ --      --
help: add missing lifetime argument
   |
LL |     reuse foo::<String, 'static, 'static, 123, asdasd> as bar4;
   |                       +++++++++

error[E0107]: function takes 3 generic arguments but 6 generic arguments were supplied
  --> $DIR/generics-gen-args-errors.rs:60:11
   |
LL |     reuse foo::<1, 2, _, 4, 5, _> as bar5;
   |           ^^^          --------- help: remove the unnecessary generic arguments
   |           |
   |           expected 3 generic arguments
   |
note: function defined here, with 3 generic parameters: `T`, `U`, `N`
  --> $DIR/generics-gen-args-errors.rs:44:8
   |
LL |     fn foo<'a: 'a, 'b: 'b, T: Clone, U: Clone, const N: usize>() {}
   |        ^^^                 -         -         --------------

error[E0107]: function takes 3 generic arguments but 5 generic arguments were supplied
  --> $DIR/generics-gen-args-errors.rs:63:11
   |
LL |     reuse foo::<1, 2,asd,String, { let x = 0; }> as bar6;
   |           ^^^           ----------------------- help: remove the unnecessary generic arguments
   |           |
   |           expected 3 generic arguments
   |
note: function defined here, with 3 generic parameters: `T`, `U`, `N`
  --> $DIR/generics-gen-args-errors.rs:44:8
   |
LL |     fn foo<'a: 'a, 'b: 'b, T: Clone, U: Clone, const N: usize>() {}
   |        ^^^                 -         -         --------------

error[E0747]: constant provided when a type was expected
  --> $DIR/generics-gen-args-errors.rs:67:17
   |
LL |     reuse foo::<"asdasd", asd, "askdn", 'static, 'a> as bar7;
   |                 ^^^^^^^^

error[E0747]: constant provided when a type was expected
  --> $DIR/generics-gen-args-errors.rs:72:17
   |
LL |     reuse foo::<{}, {}, {}> as bar8;
   |                 ^^

error[E0107]: trait takes 2 generic arguments but 6 generic arguments were supplied
  --> $DIR/generics-gen-args-errors.rs:81:11
   |
LL |     reuse Trait::<asd, asd, asd, asd, asd, asdasa>::foo as bar1;
   |           ^^^^^           ----------------------- help: remove the unnecessary generic arguments
   |           |
   |           expected 2 generic arguments
   |
note: trait defined here, with 2 generic parameters: `T`, `N`
  --> $DIR/generics-gen-args-errors.rs:77:11
   |
LL |     trait Trait<'b, 'c, 'a, T, const N: usize>: Sized {
   |           ^^^^^             -  --------------

error[E0107]: trait takes 3 lifetime arguments but 2 lifetime arguments were supplied
  --> $DIR/generics-gen-args-errors.rs:90:11
   |
LL |     reuse Trait::<'static, 'static>::foo as bar2;
   |           ^^^^^   -------  ------- supplied 2 lifetime arguments
   |           |
   |           expected 3 lifetime arguments
   |
note: trait defined here, with 3 lifetime parameters: `'b`, `'c`, `'a`
  --> $DIR/generics-gen-args-errors.rs:77:11
   |
LL |     trait Trait<'b, 'c, 'a, T, const N: usize>: Sized {
   |           ^^^^^ --  --  --
help: add missing lifetime argument
   |
LL |     reuse Trait::<'static, 'static, 'static>::foo as bar2;
   |                                   +++++++++

error[E0107]: trait takes 2 generic arguments but 5 generic arguments were supplied
  --> $DIR/generics-gen-args-errors.rs:92:11
   |
LL |     reuse Trait::<1, 2, 3, 4, 5>::foo as bar3;
   |           ^^^^^       --------- help: remove the unnecessary generic arguments
   |           |
   |           expected 2 generic arguments
   |
note: trait defined here, with 2 generic parameters: `T`, `N`
  --> $DIR/generics-gen-args-errors.rs:77:11
   |
LL |     trait Trait<'b, 'c, 'a, T, const N: usize>: Sized {
   |           ^^^^^             -  --------------

error[E0107]: trait takes 2 generic arguments but 3 generic arguments were supplied
  --> $DIR/generics-gen-args-errors.rs:95:11
   |
LL |     reuse Trait::<1, 2, true>::foo as bar4;
   |           ^^^^^       ------ help: remove the unnecessary generic argument
   |           |
   |           expected 2 generic arguments
   |
note: trait defined here, with 2 generic parameters: `T`, `N`
  --> $DIR/generics-gen-args-errors.rs:77:11
   |
LL |     trait Trait<'b, 'c, 'a, T, const N: usize>: Sized {
   |           ^^^^^             -  --------------

error[E0107]: trait takes 3 lifetime arguments but 1 lifetime argument was supplied
  --> $DIR/generics-gen-args-errors.rs:98:11
   |
LL |     reuse Trait::<'static>::foo as bar5;
   |           ^^^^^   ------- supplied 1 lifetime argument
   |           |
   |           expected 3 lifetime arguments
   |
note: trait defined here, with 3 lifetime parameters: `'b`, `'c`, `'a`
  --> $DIR/generics-gen-args-errors.rs:77:11
   |
LL |     trait Trait<'b, 'c, 'a, T, const N: usize>: Sized {
   |           ^^^^^ --  --  --
help: add missing lifetime arguments
   |
LL |     reuse Trait::<'static, 'static, 'static>::foo as bar5;
   |                          ++++++++++++++++++

error[E0107]: trait takes 3 lifetime arguments but 1 lifetime argument was supplied
  --> $DIR/generics-gen-args-errors.rs:101:11
   |
LL |     reuse Trait::<1, 2, 'static, DDDD>::foo::<1, 2, 3, 4, 5, 6> as bar6;
   |           ^^^^^   - supplied 1 lifetime argument
   |           |
   |           expected 3 lifetime arguments
   |
note: trait defined here, with 3 lifetime parameters: `'b`, `'c`, `'a`
  --> $DIR/generics-gen-args-errors.rs:77:11
   |
LL |     trait Trait<'b, 'c, 'a, T, const N: usize>: Sized {
   |           ^^^^^ --  --  --
help: add missing lifetime arguments
   |
LL |     reuse Trait::<1, 'static, 'static, 2, 'static, DDDD>::foo::<1, 2, 3, 4, 5, 6> as bar6;
   |                    ++++++++++++++++++

error[E0107]: trait takes 2 generic arguments but 3 generic arguments were supplied
  --> $DIR/generics-gen-args-errors.rs:101:11
   |
LL |     reuse Trait::<1, 2, 'static, DDDD>::foo::<1, 2, 3, 4, 5, 6> as bar6;
   |           ^^^^^       --------------- help: remove the unnecessary generic argument
   |           |
   |           expected 2 generic arguments
   |
note: trait defined here, with 2 generic parameters: `T`, `N`
  --> $DIR/generics-gen-args-errors.rs:77:11
   |
LL |     trait Trait<'b, 'c, 'a, T, const N: usize>: Sized {
   |           ^^^^^             -  --------------

error[E0107]: method takes 2 generic arguments but 6 generic arguments were supplied
  --> $DIR/generics-gen-args-errors.rs:101:41
   |
LL |     reuse Trait::<1, 2, 'static, DDDD>::foo::<1, 2, 3, 4, 5, 6> as bar6;
   |                                         ^^^       ------------ help: remove the unnecessary generic arguments
   |                                         |
   |                                         expected 2 generic arguments
   |
note: method defined here, with 2 generic parameters: `U`, `M`
  --> $DIR/generics-gen-args-errors.rs:78:12
   |
LL |         fn foo<'d: 'd, U, const M: bool>(self) {}
   |            ^^^         -  -------------

error[E0107]: trait takes 3 lifetime arguments but 1 lifetime argument was supplied
  --> $DIR/generics-gen-args-errors.rs:107:11
   |
LL |     reuse Trait::<Trait, Clone, _, 'static, dyn Send, _>::foo::<1, 2, 3, _, 6> as bar7;
   |           ^^^^^   ----- supplied 1 lifetime argument
   |           |
   |           expected 3 lifetime arguments
   |
note: trait defined here, with 3 lifetime parameters: `'b`, `'c`, `'a`
  --> $DIR/generics-gen-args-errors.rs:77:11
   |
LL |     trait Trait<'b, 'c, 'a, T, const N: usize>: Sized {
   |           ^^^^^ --  --  --
help: add missing lifetime arguments
   |
LL |     reuse Trait::<Trait, 'static, 'static, Clone, _, 'static, dyn Send, _>::foo::<1, 2, 3, _, 6> as bar7;
   |                        ++++++++++++++++++

error[E0107]: trait takes 2 generic arguments but 5 generic arguments were supplied
  --> $DIR/generics-gen-args-errors.rs:107:11
   |
LL |     reuse Trait::<Trait, Clone, _, 'static, dyn Send, _>::foo::<1, 2, 3, _, 6> as bar7;
   |           ^^^^^               --- help: remove the unnecessary generic argument
   |           |
   |           expected 2 generic arguments
   |
note: trait defined here, with 2 generic parameters: `T`, `N`
  --> $DIR/generics-gen-args-errors.rs:77:11
   |
LL |     trait Trait<'b, 'c, 'a, T, const N: usize>: Sized {
   |           ^^^^^             -  --------------

error[E0107]: method takes 2 generic arguments but 5 generic arguments were supplied
  --> $DIR/generics-gen-args-errors.rs:107:59
   |
LL |     reuse Trait::<Trait, Clone, _, 'static, dyn Send, _>::foo::<1, 2, 3, _, 6> as bar7;
   |                                                           ^^^       --------- help: remove the unnecessary generic arguments
   |                                                           |
   |                                                           expected 2 generic arguments
   |
note: method defined here, with 2 generic parameters: `U`, `M`
  --> $DIR/generics-gen-args-errors.rs:78:12
   |
LL |         fn foo<'d: 'd, U, const M: bool>(self) {}
   |            ^^^         -  -------------

error: aborting due to 47 previous errors

Some errors have detailed explanations: E0106, E0107, E0261, E0284, E0401, E0423, E0425, E0747.
For more information about an error, try `rustc --explain E0106`.
